--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,14 @@ include_directories(headers)
 
 set(SOURCE_FILES
     srcs/main.cpp
+    srcs/Node.class.cpp
+    srcs/ParsedNode.class.cpp
+    srcs/Parser.class.cpp
+    srcs/Lexer.class.cpp
+    headers/Lexer.class.hpp
+    headers/Parser.class.hpp
+    headers/ParsedNode.class.hpp
+    headers/Node.class.hpp
     )
 
 add_executable(expertSystem ${SOURCE_FILES})
